--- a/test-maui/View/DetailsPage.xaml
+++ b/test-maui/View/DetailsPage.xaml
@@ -1,12 +1,63 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="test_maui.View.DetailsPage"
-             Title="DetailsPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             x:Class="test_maui.View.DetailsPage"             
+             xmlns:viewmodel="clr-namespace:test_maui.ViewModel"
+             x:DataType="viewmodel:MonkeyDetailsViewModel"
+             Title="{Binding Monkey.Name}"
+             >
+
+    <ScrollView>
+        <VerticalStackLayout>
+            <Grid ColumnDefinitions="*,Auto,*"
+                  RowDefinitions="160,Auto">
+                <BoxView BackgroundColor="Khaki"
+                         Grid.ColumnSpan="3"
+                         HeightRequest="160"
+                         HorizontalOptions="FillAndExpand"/>
+                <Frame Grid.RowSpan="2"
+                       Grid.Column="1"
+                       HeightRequest="160"
+                       WidthRequest="160"
+                       CornerRadius="15"
+                       HorizontalOptions="Center"
+                       IsClippedToBounds="True"
+                       Padding="0"
+                       Margin="0,80,0,0">
+                    <Image Aspect="AspectFill"
+                           HeightRequest="160"
+                           WidthRequest="160"
+                           HorizontalOptions="Center"
+                           VerticalOptions="Center"
+                           Source="{Binding Monkey.Image}"/>
+                </Frame>
+                <Button 
+                    Text="🗺"
+                    FontSize="45"
+                    Command="{Binding OpenMapCommand}"
+                    HorizontalOptions="Center"
+                    HeightRequest="80"
+                    WidthRequest="80"
+                    Margin="0,150,0,0"  
+                        Grid.Column="3"
+                        Grid.Row="0"
+                        CornerRadius="100"
+                    BackgroundColor="White"
+                    />
+                
+               
+            </Grid>
+
+           
+            <VerticalStackLayout Padding="30,20,17,0" Spacing="10">
+                <Label Text="{Binding Monkey.Details, StringFormat='Details: {0}'}" FontSize="15"/>
+                <Label Text="{Binding Monkey.Location, StringFormat='Location: {0}'}"/>
+                <Label Text="{Binding Monkey.Population, StringFormat='Population: {0}'}"/>
+                
+            </VerticalStackLayout>
+            
+        </VerticalStackLayout>
+        
+    </ScrollView>
+    
 </ContentPage>
