--- a/test-maui/View/MainPage.xaml
+++ b/test-maui/View/MainPage.xaml
@@ -23,6 +23,12 @@
                         <Frame HeightRequest="125" 
                                BackgroundColor="Transparent"
                                BorderColor="#333">
+                            <Frame.GestureRecognizers>
+                                <TapGestureRecognizer
+                                    CommandParameter="{Binding .}"
+                                    Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MonkeyViewModel}}, Path=GoToDetailsCommand}"
+                                    />
+                            </Frame.GestureRecognizers>
                             <Grid Padding="0"
                                   ColumnDefinitions="125,*">
                                 <Image Aspect="AspectFit" 
@@ -30,7 +36,12 @@
                                        WidthRequest="125"
                                        HeightRequest="125"
                                    />
-                                
+                                <VerticalStackLayout Grid.Column="1"
+                                                     Padding="10"
+                                                     VerticalOptions="Center">
+                                    <Label Text="{Binding Name}"/>
+                                    <Label Text="{Binding Location}"/>
+                                </VerticalStackLayout>
                             </Grid>
                         </Frame>
                     </Grid>
@@ -43,6 +54,13 @@
                 IsEnabled="{Binding IsNotBusy}"
                 Grid.Row="2"
                 Grid.Column="1"
+                Margin="8"/>
+
+        <Button Text="Find closest"
+                Command="{Binding GetClosestMonkeyCommand}"
+                IsEnabled="{Binding IsNotBusy}"
+                Grid.Row="2"
+                Grid.Column="0"
                 Margin="8"/>
         <ActivityIndicator IsVisible="{Binding IsBusy}"
                            IsEnabled="{Binding IsBusy}"
